--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 jekyll-spaceship:
   mermaid-processor:
+    mode: 'pre-fetch'  # fetch image at building stage
     syntax:
       code: 'mermaid'
 plugins:
