--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,12 @@
+minimal_mistakes_skin: sunrise
 jekyll-spaceship:
   mermaid-processor:
     mode: 'pre-fetch'  # fetch image at building stage
     syntax:
       code: 'mermaid'
 plugins:
+  - jekyll-include-cache
   - jekyll-spaceship
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 # https://talk.jekyllrb.com/t/error-your-site-could-not-be-built-no-repo-name-found/5688/3
 repository: Mafalda-SFU/Mafalda-SFU.github.io
-theme: jekyll-theme-cayman
