--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -2,16 +2,12 @@ main:
   - description: What's Mafalda SFU?
     title: About
     url: /about/
-  - children:
-    - title: Remote Mediasoup client
-      url: /Remote-Mediasoup-client/
-    - title: Remote Mediasoup server
-      url: /Remote-Mediasoup-server/
-    - title: Mediasoup cluster
-      url: /Mediasoup-cluster/
-    description: Mafalda SFU sub-projects
+  - description: Mafalda SFU sub-projects
     title: Projects
     url: /projects/
+  - description: Mafalda SFU integration demos
+    title: Demos
+    url: /demos/
   - description: Development blog
     title: Blog
     url: /blog/
