--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -63,7 +63,7 @@ jekyll-spaceship:
     mode: pre-fetch  # fetch image at building stage
     syntax:
       code: mermaid
-logo: &logo /assets/images/logo.jpeg
+logo: &logo /assets/images/logo.png
 lunr:
   search_full_content: true
   search_within_pages: true
