--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -51,6 +51,18 @@ footer:
     - label: Twitter
       icon: fab fa-fw fa-twitter-square
       url: https://twitter.com/mafalda_sfu
+    - label: LinkedIn
+      icon: fab fa-fw fa-linkedin
+      url: https://www.linkedin.com/company/mafalda-sfu
+    - label: Google Business
+      icon: fab fa-fw fa-google
+      url: https://g.page/Mafalda%20SFU
+    - label: Facebook
+      icon: fab fa-fw fa-facebook
+      url: https://www.facebook.com/profile.php?id=100089773552926
+    - label: Instagram
+      icon: fab fa-fw fa-instagram
+      url: https://twitter.com/mafalda_sfu
     - label: GitHub
       icon: fab fa-fw fa-github
       url: https://github.com/mafalda-sfu
