Use `Google` as social network name

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -53,7 +53,7 @@ footer:
     - label: LinkedIn
       icon: fab fa-fw fa-linkedin
       url: https://www.linkedin.com/company/mafalda-sfu
-    - label: Google Business
+    - label: Google
       icon: fab fa-fw fa-google
       url: https://g.page/Mafalda%20SFU
     - label: Facebook
