Fix Instagram link at footer

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -61,7 +61,7 @@ footer:
       url: https://www.facebook.com/profile.php?id=100089773552926
     - label: Instagram
       icon: fab fa-fw fa-instagram
-      url: https://twitter.com/mafalda_sfu
+      url: https://www.instagram.com/mafalda_sfu
     - label: GitHub
       icon: fab fa-fw fa-github
       url: https://github.com/mafalda-sfu
